# rules_tcl

./: .bazelrc  .gitignore  404.html  README.md  WORKSPACE.bazel  index.html  print.html  rules.html  searchindex.js  searchindex.json  tcl.html  toc.html  toc.js  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: ci.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: index.md
examples/hello_world/: BUILD.bazel  hello_world.tcl
tcl/: BUILD.bazel  tcl_binary.bzl  tcl_info.bzl  tcl_library.bzl  tcl_test.bzl  tcl_toolchain.bzl
tcl/private/: BUILD.bazel  BUILD.tcllib.bazel  binary_wrapper.bat.tpl  binary_wrapper.sh.tpl  entrypoint.tcl  tcl.bzl  toolchain.bzl
tcl/private/tests/binary/: BUILD.bazel  writer.tcl
tcl/private/tests/binary_with_lib/: BUILD.bazel  writerlib_writer.tcl
tcl/private/tests/test/: BUILD.bazel  hash_test.tcl
tcl/private/tests/test_with_lib/: BUILD.bazel  writelib_test.tcl
tcl/runfiles/: BUILD.bazel  pkgIndex.tcl  runfiles.tcl
tcl/runfiles/tests/: BUILD.bazel  runfiles_test.tcl
tools/version_test/: BUILD.bazel  version_test.tcl
